# bordercore-nexus

./: .gitignore  .mcp.json  Makefile  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: backend.yml  ci.yml  frontend.yml
bordercore/: .eslintrc  .eslintrc.react.json  .prettierignore  .prettierrc.json  .stylelintrc.json  conftest.py  eslint.config.mjs  package-lock.json  package.json  pytest.ini  tailwind.config.js  test_page.py  tsconfig.json  vite.config.js  webpack.config.js
bordercore/.githooks/: pre-commit
bordercore/.husky/: post-commit  pre-commit
bordercore/accounts/: forms.py  middleware.py  models.py  services.py  themes.py  urls.py  views.py
bordercore/accounts/migrations/: 0019_alter_usernote_unique_together_usernote_blob_and_more.py  0020_alter_drilltag_unique_together_and_more.py  0021_userprofile_weather.py  0022_alter_userprofile_nytimes_api_key.py  0023_alter_userprofile_theme.py  0024_userprofile_sidebar_order.py  0025_userprofile_bookmarks_per_page.py  0026_usersession.py  0027_userprofile_topbar_animation.py  0028_alter_userprofile_topbar_animation.py  0029_userprofile_visualizer.py  0030_alter_userprofile_uuid.py  0031_userprofile_weather_location.py
bordercore/accounts/tests/: factories.py  test_fetch_weather.py  test_models.py  test_pages.py  test_services.py  test_views.py
bordercore/api/: serializers.py  views.py
bordercore/api/tests/: test_views.py
bordercore/apps/: rfc3339.py
bordercore/aws/create_bookmark_thumbnail/: control.sh  create_bookmark_thumbnail_lambda.py  deploy.sh  invoke_chromda_lambda.py  invoke_lambda.py  requirements.txt  template.yaml
bordercore/aws/create_collection_thumbnail/: control.sh  create_collection_thumbnail_lambda.py  deploy.sh  invoke_lambda.py  template.yaml
bordercore/aws/create_embeddings/: control.sh  create_embeddings_lambda.py  deploy.sh  invoke_lambda.py  requirements.txt  template.yaml
bordercore/aws/create_image_embedding/: Dockerfile  conftest.py  create_image_embedding_lambda.py  deploy.sh  requirements.txt  template.yaml
bordercore/aws/create_thumbnail/: Dockerfile  control.sh  create_thumbnail_lambda.py  deploy.sh  invoke_lambda.py  requirements.txt  template.yaml
bordercore/aws/index_blobs/: conftest.py  control.sh  index_blobs_lambda.py  (+3 more)
bordercore/blob/: admin.py  apps.py  constants.py  consumers.py  elasticsearch_indexer.py  forms.py  models.py  rag_eval.py  services.py  services_django_chat.py  signals.py  urls.py  views.py
bordercore/book/: admin.py  models.py  views.py
bordercore/bookmark/: admin.py  forms.py  managers.py  models.py  services.py  urls.py  views.py
bordercore/collection/: apps.py  forms.py  models.py  services.py  urls.py  views.py
bordercore/docs/: REACT_DOCUMENTATION.md  refined-patterns.md
bordercore/drill/: admin.py  apps.py  forms.py  managers.py  models.py  services.py  urls.py  views.py
bordercore/feed/: models.py  reddit.py  services.py  throttle.py  urls.py  views.py
bordercore/fitness/: admin.py  models.py  services.py  urls.py  views.py
bordercore/fixtures/: blob.py  bookmark.py  feed.py  functional.py  habit.py  music.py  node.py  sort_order.py  todo.py
bordercore/front-end/: boldenOption.test.ts  debounce.js  index.js  util.d.ts  util.js
bordercore/habit/: admin.py  managers.py  models.py  services.py  urls.py  views.py
bordercore/homepage/: urls.py  views.py
bordercore/lib/: aws.py  calendar_events.py  constants.py  context_processors.py  decorators.py  embeddings.py  exceptions.py  fields.py  image_search.py  mixins.py  scrollable_panel.py  services.py  thumbnails.py  time_utils.py  util.py
bordercore/metrics/: apps.py  consumers.py  managers.py  models.py  services.py  signals.py  urls.py  views.py
bordercore/music/: forms.py  models.py  services.py  urls.py  views.py
bordercore/node/: forms.py  models.py  services.py  urls.py  views.py
bordercore/quote/: admin.py  models.py
bordercore/reminder/: admin.py  consumers.py  forms.py  models.py  services.py  urls.py  views.py
bordercore/scripts/: copy-sqlite-wasm.js
bordercore/search/: api.py  helpers.py  models.py  services.py  urls.py  views.py
bordercore/tag/: admin.py  models.py  services.py  urls.py  views.py
bordercore/templates/: 403.html  404.html  500.html  base.html  base_react.html  login.html
bordercore/tests/: test_general.py
bordercore/todo/: admin.py  apps.py  consumers.py  managers.py  models.py  services.py  signals.py  urls.py  views.py
bordercore/visualize/: services.py  urls.py  views.py
config/: asgi.py  crontab-www-data  routing.py  urls.py
config/docker/: Dockerfile
config/elasticsearch/: Dockerfile  docker-compose.es8.yml  mappings.json
config/git/: post-receive
config/nginx/: bordercore.com  nginx.conf
config/settings/: base.py  dev.py  prod.py
config/supervisor/: daphne.conf
config/tests/: test_urls.py
docs/: breadcrumb-audit.md
requirements/: base.txt  dev.txt
(+1084 files in other folders)
