[project]
name = "bordercore"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "backports-abc==0.4",
    "backports.ssl-match-hostname==3.5.0.1",
    "beautifulsoup4==4.14.3",
    "billiard==3.6.0.0",
    "boto3==1.40.44",
    "Django==5.2.13",
    "djangorestframework==3.15.2",
    "django-storages==1.11.1",
    "elasticsearch==7.17.13",
    "elasticsearch-dsl==7.4.0",
    "factory-boy==3.2.1",
    "faker-file==0.15.1",
    "feedparser==6.0.12",
    "google-api-python-client==2.184.0",
    "httplib2>=0.31.2",
    "humanize==4.13.0",
    "instaloader==4.9.5",
    "isodate==0.6.1",
    "lxml==6.1.0",
    "Markdown==3.8.1",
    "mutagen==1.45.1",
    "nh3==0.3.3",
    "oauth2client==4.0.0",
    "openai==2.0.0",
    "pdf2image==0.1.14",
    "Pillow==12.2.0",
    "pyasn1>=0.6.3",
    "pipdeptree==2.35.2",
    "psycopg[binary,pool]==3.2.9",
    "Pygments==2.20.0",
    "pytest==9.0.3",
    "pytest-cov==6.2.1",
    "pytest-xdist==3.8.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-magic==0.4.15",
    "python-mimeparse==1.6.0",
    "pytz==2025.2",
    "reportlab==4.4.3",
    "requests==2.33.0",
    "responses==0.25.8",
    "rsa==4.7",
    "simplejson==3.6.5",
    "singledispatch==3.4.0.3",
    "sqlparse==0.5.4",
    "tiktoken==0.8.0",
    "trafilatura==1.12.1",
    "types-Markdown==3.10.0.20251106",
    "types-python-dateutil==2.9.0.20251115",
    "types-pytz==2025.2.0.20251108",
    "uritemplate==4.1.1",
    "urllib3>=2.6.3",
    "sentry-sdk>=2.20,<3",
    "vine==1.3.0",
]

[dependency-groups]
dev = [
    "colorama==0.4.4",
    "django-coverage-plugin==2.0.2",
    "django-debug-toolbar==6.0.0",
    "django-extensions==3.1.3",
    "django-stubs==5.2.2",
    "django-watchfiles==1.1.0",
    "ipython>=9.10.0",
    "mcp>=1.2.0",
    "moto==5.1.13",
    "mypy==1.17.1",
    "nplusone==1.0.0",
    "pylint-django==2.5.5",
    "PyMuPDF==1.26.4",
    "pytest-django==4.11.1",
    "PyVirtualDisplay==2.0",
    "rich==13.3.1",
    "selenium>=4.6.1",
    "types-requests==2.30.0.0",
    "Werkzeug==3.1.6",
]
prod = [
    "gunicorn==23.0.0",
]

[tool.coverage.run]
plugins = ["django_coverage_plugin"]

[tool.coverage.django_coverage_plugin]
template_extensions = "html"

[tool.coverage.report]
omit = [
  "*/__init__.py*",
  "*test*",
  "*/migrations/*",
  "bordercore/apps/rfc3339.py",
  "*/env/*",
  "*/node_modules/*",
  "*aws-sam*",
  "*/static/pdfjs/*",
  "*/tests/pages/*",
  "*/bordercore/coverage/*",
]

# Plugin-specific configuration (Django)
[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]
known_first_party = [
  "accounts", "api", "blob", "bookmark", "collection", "drill",
  "fitness", "homepage", "lib", "metrics", "music", "node",
  "reminder", "search", "quote", "tag", "todo"
]
virtual_env = "/home/jerrell/dev/django/env"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true

# Keep your verbose-regex exclude exactly as-is
exclude = '''
(?x)(
    # Exclude all test files
    (^|/)tests/
    |
    # Exclude test configuration file
    conftest\.py
    |
    # Exclude test fixtures
    (^|/)fixtures/
    |
    # Exclude all migration files
    (^|/)migrations/
    |
    # Exclude blob management commands
    bordercore/blob/management/commands/
    |
    bordercore/aws/[^/]+/lib/.*$
    |
    # Exclude selenium test page (complex dynamic patterns)
    bordercore/test_page\.py
 )
'''

# Search path additions
mypy_path = ["bordercore"]

# Plugins (Django)
plugins = ["mypy_django_plugin.main"]

# Per-module overrides (equivalent to [mypy-modules.rfc3339] in INI)
[[tool.mypy.overrides]]
module = ["modules.rfc3339"]
ignore_errors = true

[tool.pylint.MAIN]
load-plugins = ["pylint_django"]
django-settings-module = "config.settings.dev"
max-line-length = 160

[tool.pylint."MESSAGES CONTROL"]
disable = ["imported-auth-user"]

[tool.pytest.ini_options]
addopts = "--reuse-db --capture=no --tb=line -p no:cacheprovider --ignore=node_modules"
log_cli_level = "WARNING"
markers = [
    "data_quality: tests that measure data integrity",
    "django_db: Access the Django database (provided by pytest-django)",
    "functional: functional tests",
    "wumpus: tests that should only be run on wumpus",
]
filterwarnings = [
    # Wait for PyMuPDF upgrade for these warnings to go away
    # https://github.com/swig/swig/issues/2881#issuecomment-2332652634
    "ignore:.*swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:.*SwigPy(Packed|Object|varlink).*__module__ attribute",
    # Remove this after upgrading to Django 6
    "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated.",
]
